fix search css bug, and add scrollbar from db genre

--- a/deinbuch/engine/assets/css/style.css
+++ b/deinbuch/engine/assets/css/style.css
@@ -537,7 +537,11 @@ body {
 }
 
 
-
+/*dropdown suche*/
+#kategorieSelect{
+    margin-left: 10px;
+    height: 26px;
+}
 
 
 
